# stt-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_http.py  run_local.py
example/: config.py  http-server.py  main.py  process.py  requirements.txt  run_http_server.py  run_local_file.py
files/: .gitignore
src/: config.py  process.py  utils.py
src/adapters/: audio_decode_ffmpeg.py  diarization_speechbrain.py  stt_vosk.py
src/domain/: ports.py
src/infra/: io_utils.py  schema.py
src/usecases/: transcribe.py
stt_pipeline/: __init__.py  config.py  utils.py
stt_pipeline/adapters/: audio_decode_ffmpeg.py  diarization_speechbrain.py  stt_vosk.py
stt_pipeline/domain/: entities.py  ports.py
stt_pipeline/infra/: caching.py  io_utils.py
stt_pipeline/usecases/: transcribe.py
sttspeakerid/: config.py  process.py  utils.py
sttspeakerid/adapters/: diarization_speechbrain.py  stt_vosk.py
sttspeakerid/domain/: ports.py
sttspeakerid/infra/: caching.py  io_utils.py  schema.py
sttspeakerid/usecase/: transcribe.py
