[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-pipeline"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "vosk==0.3.45",
  "librosa==0.11.0",
  "soundfile==0.13.1",
  "torch==2.8.0",
  "speechbrain==1.0.3",
  "python-multipart==0.0.20",
  "scikit-learn==1.7.1",
  "torchaudio==2.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stt_pipeline*"]
